--- a/hsklmusic.cabal
+++ b/hsklmusic.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 258dcaab4be9c9325d77f739a7de52a2d6bad1e97cffa9b84e4a8cc040e281c2
+-- hash: 5bb272294e06891ec23c923887d86ea4f49c5f8a390e05e10ff2c5b394c9c1c9
 
 name:           hsklmusic
 version:        0.1.0.0
@@ -34,6 +34,8 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , process
   default-language: Haskell2010
 
 executable hsklmusic-exe
@@ -45,7 +47,9 @@ executable hsklmusic-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , hsklmusic
+    , process
   default-language: Haskell2010
 
 test-suite hsklmusic-test
@@ -58,5 +62,7 @@ test-suite hsklmusic-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , hsklmusic
+    , process
   default-language: Haskell2010
